# vanadium-legacy

./: .gitignore  README.md  docker.sh  native.Dockerfile  riscv.Dockerfile  rust.Dockerfile
.github/workflows/: apps.yml  build-packages.yml
app/app-bitcoin/: .gitignore  Cargo.toml  EXAMPLES.md  README.md  prepare_dependencies.sh  run.sh
app/app-bitcoin/.cargo/: config
app/app-bitcoin/bitcoin/: Cargo.toml  README.md
app/app-bitcoin/bitcoin/src/: lib.rs
app/app-bitcoin/client_py/: README.md  bitcoin.py  message_pb2.py  requirements.txt
app/app-bitcoin/patches/: rust-bitcoin-fix-atomic.patch  rust-bitcoin-fix-manifest.patch
app/app-bitcoin/src/: crypto.rs  main.rs  ui.rs  wallet.rs
app/app-bitcoin/src/handlers/: get_extended_pubkey.rs  get_master_fingerprint.rs  get_version.rs  get_wallet_address.rs  mod.rs  register_wallet.rs  sign_psbt.rs
app/app-bitcoin/src/message/: message.proto  message.rs
app/app-bitcoin/src/wallet/: mod.rs  script.rs  wallet.rs
app/app-rust/: Cargo.toml
app/app-rust/src/: main.rs  swap.rs
app/bitcoin/: .gitignore  Cargo.toml  EXAMPLES.md  README.md  prepare_dependencies.sh  run-device.sh  run.sh
app/bitcoin/.cargo/: config
app/bitcoin/client_py/: README.md  bitcoin.py  message_pb2.py  requirements.txt  util.py
app/bitcoin/lib/: create-lib.sh
app/bitcoin/patches/: rust-secp256k1-fix-build-script.patch
app/bitcoin/src/: constants.rs  error.rs  main.rs  profile.rs  state.rs  taproot.rs  version.rs
app/bitcoin/src/handlers/: block_headers.rs  get_extended_pubkey.rs  get_wallet_address.rs  mod.rs  register_wallet.rs  sign_psbt.rs
app/bitcoin/src/message/: README.md  message.proto  message.rs
app/bitcoin/src/test_utils/: mod.rs  musig.rs
app/bitcoin/src/wallet/: bip32.rs  merkle.rs  mod.rs  musig.rs  script.rs  wallet.rs  wrappers.rs
app/rust/: .gitignore  Cargo.toml  README.md  build.rs
app/rust/.cargo/: config
app/rust/client_py/: README.md  client.py  message_pb2.py  requirements.txt
app/rust/protos/: boiler.proto
app/rust/src/: comm.rs  error.rs  handler.rs  main.rs  partner.rs  swap.rs  ui.rs  version.rs
app/rust/src/btc/: mod.rs
app/rust/src/eth/: mod.rs
c-sdk/: CMakeLists.txt  README.md  ecall.h
c-sdk/api/: ecall-nr.h  ecall-params.h
c-sdk/native/: ecall-native.c  ecall-vm.c  ecall-vm.h  os_random.h  speculos.c  speculos.h
c-sdk/native/from_vm/: ecall.h  ecall_hash.c  error.h
c-sdk/native/speculos/: README.txt
c-sdk/native/speculos/bolos/: cx_sha512.c  os_bip32.c
c-sdk/risc-v/: ecall-riscv.c
c-sdk/ux/: CMakeLists.txt
docs/: Overview.excalidraw  README.md  app-dev.md
exapp-sdk/.cargo/: config
host/: app.py  comm.py  merkletree.py  requirements.txt  stream_device.py
rust-sdk/: Cargo.toml
rust-sdk/.cargo/: config
rust-sdk/src/: base58.rs  crypto.rs  ecall.rs  lib.rs  secp256k1.rs  segwit_addr.rs
tools/: clang-format.sh
vm/: Makefile  README.md
vm/src/: apdu.h  app_signature.c  cpu.c  ecall.c  ecall.h  ecall_bolos.c  ecall_dispatcher.c  ecall_hash.c  ecall_hash.h  io.c  loading.c  main.c  merkle.c  merkle.h  rv_cpu.h  stream.c  uint256-internal.h
vm/src/debug-helpers/: debug.c  debug.h
vm/tests/: vm.c
