[package]
name = "app-bitcoin"
version = "0.1.0"
authors = ["Salvatore Ingala"]

[[bin]]
name = "app-bitcoin"
path = "src/main.rs"

[dependencies]
bitcoin = { path = "rust-bitcoin/bitcoin", default-features = false, features = ["no-std"] }
byteorder = { version = "1.4.3", default-features = false }
quick-protobuf = { version = "0.8.1", default-features = false }
vanadium_sdk = { path = "../../rust-sdk" }

[patch.crates-io.bitcoin_hashes]
path = "./rust-bitcoin/hashes"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true
opt-level = "z"
#codegen-units = 1
lto = true
