[package]
name = "vnd-bitcoin"
version = "0.1.0"
authors = ["Salvatore Ingala"]

[[bin]]
name = "vnd-bitcoin"
path = "src/main.rs"

[dependencies]
bitcoin = { path = "rust-bitcoin/bitcoin", default-features = false, features = ["no-std"] }
byteorder = { version = "1.4.3", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "0.3.4" }
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }
quick-protobuf = { version = "0.8.1", default-features = false }
subtle = { version = "2.5.0", default-features = false }
vanadium_sdk = { path = "../../rust-sdk" }

[dev-dependencies]
base64 = "0.21.2"

[patch.crates-io.bitcoin_hashes]
path = "./rust-bitcoin/hashes"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
strip = "none"
opt-level = "z"
#codegen-units = 1
lto = true
